@@ -3,6 +3,7 @@ wlanpi-webui (1.1.6-19) unstable; urgency=medium
   * add versions to _hyperscript and htmx JS files
   * add flask_minify 
   * fix proxy settings
+  * change dropdown offset
 
  -- Josh Schmelzle <josh@joshschmelzle.com>  Sat, 09 Sep 2023 16:52:05 -0400
 
